--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 <div class="body">
                     <!-- Logo -->
                     <img
-                        src="./assets/img/logo.svg"
+                        src="./assets/icons/logo.svg"
                         alt="Lesson"
                         class="logo"
                     />
@@ -59,6 +59,7 @@
 
         <!-- Main -->
         <main style="height: 5000px">
+            <!-- Hero -->
             <div class="hero">
                 <div class="content">
                     <div class="body">
@@ -73,7 +74,7 @@
                                 <div class="item">
                                     <div class="icon">
                                         <img
-                                            src="./assets/img/list.svg"
+                                            src="./assets/icons/list.svg"
                                             alt=""
                                         />
                                     </div>
@@ -86,7 +87,7 @@
                                 <div class="item">
                                     <div class="icon">
                                         <img
-                                            src="./assets/img/code.svg"
+                                            src="./assets/icons/code.svg"
                                             alt=""
                                         />
                                     </div>
@@ -99,7 +100,7 @@
                                 <div class="item">
                                     <div class="icon">
                                         <img
-                                            src="./assets/img/list.svg"
+                                            src="./assets/icons/speaker.svg"
                                             alt=""
                                         />
                                     </div>
@@ -113,7 +114,7 @@
 
                         <!-- Hero right -->
                         <div class="content-block">
-                            <h1 class="heading">
+                            <h1 class="heading lv1">
                                 Learn without limits and spread knowledge.
                             </h1>
 
@@ -124,11 +125,13 @@
                             </p>
 
                             <div class="cta-group">
-                                <a href="#!" class="btn hero-cta">See Courses</a>
+                                <a href="#!" class="btn hero-cta">
+                                    See Courses
+                                </a>
                                 <button class="watch-video">
                                     <div class="icon">
                                         <img
-                                            src="./assets/img/play.svg"
+                                            src="./assets/icons/play.svg"
                                             alt=""
                                         />
                                     </div>
@@ -142,6 +145,179 @@
                                 <strong>50k</strong> Students
                                 <strong>70+</strong> Courses
                             </p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Popular -->
+            <div class="popular">
+                <div class="content">
+                    <div class="popular-top">
+                        <div class="info">
+                            <h2 class="heading lv2">Our popular courses</h2>
+                            <p class="desc">
+                                Build new skills with new trendy courses and
+                                shine for the next future career.
+                            </p>
+                        </div>
+
+                        <div class="controls">
+                            <button class="control-btn">
+                                <svg
+                                    width="8"
+                                    height="14"
+                                    viewBox="0 0 8 14"
+                                    fill="none"
+                                    xmlns="http://www.w3.org/2000/svg"
+                                >
+                                    <path
+                                        d="M7 1L1 7L7 13"
+                                        stroke="currentColor"
+                                        stroke-linecap="round"
+                                        stroke-linejoin="round"
+                                    />
+                                </svg>
+                            </button>
+                            <button class="control-btn">
+                                <svg
+                                    width="8"
+                                    height="14"
+                                    viewBox="0 0 8 14"
+                                    fill="none"
+                                    xmlns="http://www.w3.org/2000/svg"
+                                >
+                                    <path
+                                        d="M1 1L7 7L1 13"
+                                        stroke="currentColor"
+                                        stroke-linecap="round"
+                                        stroke-linejoin="round"
+                                    />
+                                </svg>
+                            </button>
+                        </div>
+                    </div>
+
+                    <div class="course-list">
+                        <!-- Course item 1 -->
+                        <div class="course-item">
+                            <a href="#!">
+                                <img
+                                    src="./assets/img/course-1.jpg"
+                                    alt="Basic web design"
+                                    class="thumb"
+                                />
+                            </a>
+                            <div class="info">
+                                <div class="head">
+                                    <h3 class="title">
+                                        <a
+                                            href="#!"
+                                            class="line-clamp break-all"
+                                        >
+                                            Basic web design
+                                        </a>
+                                    </h3>
+                                    <div class="rating">
+                                        <img
+                                            src="./assets/icons/star.svg"
+                                            alt="Star"
+                                            class="star"
+                                        />
+                                        <span class="value">4.5</span>
+                                    </div>
+                                </div>
+
+                                <p class="desc line-clamp line-2 break-all">
+                                    Get the best course, gain knowledge and
+                                    shine for your future career.
+                                </p>
+
+                                <div class="foot">
+                                    <span class="price">$120.75</span>
+                                    <button class="btn book-btn">
+                                        Book Now
+                                    </button>
+                                </div>
+                            </div>
+                        </div>
+
+                        <!-- Course item 2 -->
+                        <div class="course-item">
+                            <a href="#!">
+                                <img
+                                    src="./assets/img/course-2.jpg"
+                                    alt="UI/UX design"
+                                    class="thumb"
+                                />
+                            </a>
+                            <div class="info">
+                                <div class="head">
+                                    <h3 class="title">
+                                        <a href="#!" class="line-clamp">
+                                            UI/UX design
+                                        </a>
+                                    </h3>
+                                    <div class="rating">
+                                        <img
+                                            src="./assets/icons/star.svg"
+                                            alt="Star"
+                                            class="star"
+                                        />
+                                        <span class="value">4.5</span>
+                                    </div>
+                                </div>
+
+                                <p class="desc line-clamp line-2 break-all">
+                                    Get the best course, gain knowledge and
+                                    shine for your future career.
+                                </p>
+
+                                <div class="foot">
+                                    <span class="price">$120.75</span>
+                                    <button class="btn book-btn">
+                                        Book Now
+                                    </button>
+                                </div>
+                            </div>
+                        </div>
+
+                        <!-- Course item 3 -->
+                        <div class="course-item">
+                            <img
+                                src="./assets/img/course-3.jpg"
+                                alt="Web App design"
+                                class="thumb"
+                            />
+                            <div class="info">
+                                <div class="head">
+                                    <h3 class="title">
+                                        <a href="#!" class="line-clamp">
+                                            Web App design
+                                        </a>
+                                    </h3>
+                                    <div class="rating">
+                                        <img
+                                            src="./assets/icons/star.svg"
+                                            alt="Star"
+                                            class="star"
+                                        />
+                                        <span class="value">4.5</span>
+                                    </div>
+                                </div>
+
+                                <p class="desc line-clamp line-2 break-all">
+                                    Get the best course, gain knowledge and
+                                    shine for your future career.
+                                </p>
+
+                                <div class="foot">
+                                    <span class="price">$120.75</span>
+                                    <button class="btn book-btn">
+                                        Book Now
+                                    </button>
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
