Update Footer section

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 <div class="body">
                     <!-- Logo -->
                     <img
-                        src="./assets/icons/logo.svg"
+                        src="./assets/img/logo.svg"
                         alt="Lesson"
                         class="logo"
                     />
@@ -58,7 +58,7 @@
         </header>
 
         <!-- Main -->
-        <main style="height: 5000px">
+        <main>
             <!-- Hero -->
             <div class="hero">
                 <div class="content">
@@ -521,7 +521,7 @@
                                         and get remot job?
                                     </a>
                                 </h3>
-                                <a href="" class="btn">Read More</a>
+                                <a href="#!" class="btn">Read More</a>
                             </div>
                         </div>
 
@@ -543,7 +543,7 @@
                                         and get remot job?
                                     </a>
                                 </h3>
-                                <a href="" class="btn">Read More</a>
+                                <a href="#!" class="btn">Read More</a>
                             </div>
                         </div>
 
@@ -565,7 +565,7 @@
                                         and get remot job?
                                     </a>
                                 </h3>
-                                <a href="" class="btn">Read More</a>
+                                <a href="#!" class="btn">Read More</a>
                             </div>
                         </div>
 
@@ -587,7 +587,7 @@
                                         and get remot job?
                                     </a>
                                 </h3>
-                                <a href="" class="btn">Read More</a>
+                                <a href="#!" class="btn">Read More</a>
                             </div>
                         </div>
 
@@ -609,7 +609,7 @@
                                         and get remot job?
                                     </a>
                                 </h3>
-                                <a href="" class="btn">Read More</a>
+                                <a href="#!" class="btn">Read More</a>
                             </div>
                         </div>
 
@@ -631,7 +631,7 @@
                                         and get remot job?
                                     </a>
                                 </h3>
-                                <a href="" class="btn">Read More</a>
+                                <a href="#!" class="btn">Read More</a>
                             </div>
                         </div>
 
@@ -653,7 +653,7 @@
                                         and get remot job?
                                     </a>
                                 </h3>
-                                <a href="" class="btn">Read More</a>
+                                <a href="#!" class="btn">Read More</a>
                             </div>
                         </div>
 
@@ -675,7 +675,7 @@
                                         and get remot job?
                                     </a>
                                 </h3>
-                                <a href="" class="btn">Read More</a>
+                                <a href="#!" class="btn">Read More</a>
                             </div>
                         </div>
 
@@ -697,7 +697,7 @@
                                         and get remot job?
                                     </a>
                                 </h3>
-                                <a href="" class="btn">Read More</a>
+                                <a href="#!" class="btn">Read More</a>
                             </div>
                         </div>
                     </div>
@@ -710,5 +710,120 @@
                 </div>
             </div>
         </main>
+
+        <!-- Footer -->
+        <footer class="footer">
+            <div class="content">
+                <div class="row">
+                    <!-- Column 1 -->
+                    <div class="column">
+                        <img
+                            src="./assets/img/logo-white.svg"
+                            alt=""
+                            class="logo"
+                        />
+                        <p class="desc">
+                            Need to help for your dream Career? trust us. With
+                            Lesson, study becomes a lot easier with us.
+                        </p>
+                        <div class="socials">
+                            <a href="#!">
+                                <img
+                                    src="./assets/icons/twitter.svg"
+                                    alt="twitter"
+                                    class="icon"
+                                />
+                            </a>
+                            <a href="#!">
+                                <img
+                                    src="./assets/icons/facebook.svg"
+                                    alt="facebook"
+                                    class="icon"
+                                />
+                            </a>
+                            <a href="#!">
+                                <img
+                                    src="./assets/icons/linkedin.svg"
+                                    alt="linkedin"
+                                    class="icon"
+                                />
+                            </a>
+                            <a href="#!">
+                                <img
+                                    src="./assets/icons/instagram.svg"
+                                    alt="instagram"
+                                    class="icon"
+                                />
+                            </a>
+                        </div>
+                    </div>
+
+                    <!-- Column 2 -->
+                    <div class="column">
+                        <h3 class="title">Company</h3>
+                        <ul class="list">
+                            <li>
+                                <a href="#!">About Us</a>
+                            </li>
+                            <li>
+                                <a href="#!">Features</a>
+                            </li>
+                            <li>
+                                <a href="#!">Our Pricing</a>
+                            </li>
+                            <li>
+                                <a href="#!">Latest News</a>
+                            </li>
+                        </ul>
+                    </div>
+
+                    <!-- Column 3 -->
+                    <div class="column">
+                        <h3 class="title">Support</h3>
+                        <ul class="list">
+                            <li>
+                                <a href="#!">FAQ’s</a>
+                            </li>
+                            <li>
+                                <a href="#!">Terms & Conditions</a>
+                            </li>
+                            <li>
+                                <a href="#!">Privacy Policy</a>
+                            </li>
+                            <li>
+                                <a href="#!">Contact Us</a>
+                            </li>
+                        </ul>
+                    </div>
+
+                    <!-- Column 4 -->
+                    <div class="column">
+                        <h3 class="title">Address</h3>
+                        <ul class="list">
+                            <li>
+                                <a href="#!">
+                                    <strong>Location:</strong> 27 Division St,
+                                    New York, NY 10002, USA
+                                </a>
+                            </li>
+                            <li>
+                                <a href="#!">
+                                    <strong>Email:</strong> email@gmail.com
+                                </a>
+                            </li>
+                            <li>
+                                <a href="#!">
+                                    <strong>Phone:</strong> + 000 1234 567 890
+                                </a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+
+                <div class="copyright">
+                    <p>Copyright ©2022 webdesign.gdn All rights reserved</p>
+                </div>
+            </div>
+        </footer>
     </body>
 </html>
